--- a/style.css
+++ b/style.css
@@ -6,12 +6,42 @@
 }
 
 body{
-    background: #080808;
-    color: #fff
+    background: #fff;
+    color: #080808
 }
 
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url();
+    background-image: url(images/background4.png);
+    background-size: cover;
+    background-position: center;
+}
+
+.container{
+    padding: 10px 10%;
+}
+
+nav{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.logo{
+    width: 140px;
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a{
+    color: #080808;
+    text-decoration: none;
+    font-size: 18px;
+    
 }
