--- a/style.css
+++ b/style.css
@@ -43,5 +43,22 @@ nav ul li a{
     color: #080808;
     text-decoration: none;
     font-size: 18px;
+    position: relative;
     
+}
+
+nav ul li a::after{
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #7b5480;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
+nav ul li a:hover::after{
+    width: 100%;
+
 }
