--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background4.png);
     background-size: cover;
     background-position: center;
 }
@@ -30,7 +29,8 @@ nav{
 }
 
 .logo{
-    width: 140px;
+    
+    color: #7b5480
 }
 
 nav ul li{
@@ -61,4 +61,59 @@ nav ul li a::after{
 nav ul li a:hover::after{
     width: 100%;
 
+}
+
+.header-text{
+    margin-top: 20%;
+    font-size: 30px;
+}
+
+.header-text h1{
+    font-size: 60px;
+    margin-top: 20px;
+    display: inline;
+}
+
+
+.header-text h1 span{
+    color: #7b5480
+}
+
+.me-img{
+    width: 378px;
+    height: 425px;
+    float: right;
+    border-radius: 100%;
+    position:relative;
+    bottom: 175px;
+    right:0px;
+}
+
+#about{
+    padding: 80px 0;
+}
+
+.row{
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 35%;
+}
+
+.about-col-1 img{
+    width:100%;
+    border-radius: 15px;
+}
+
+.about-col-2{
+    flex-basis:60%
+}
+
+.sub-title{
+    font-size:60px;
+    font-weight:600;
+    color: #7b5480;
 }
